re-constructed Timer to be a Class

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 <body>
   <div id="wrapper">
     <div id="main">
-      <center style="padding:20px 0 0 0;">
-        <h1><i class="fa fa-user fa-5x"></i> Content here</h1>
-      </center>
+      <h1>Timer</h1>
 
+      <!-- Row Timer -->
+      <p id="timer">timer</p>
+      <!-- End Timer -->
     </div>
     <footer>
       footer
